@@ -45,7 +45,8 @@ enum {
 	kCCiOSVersion_4_3_1 = 0x04030100,
 	kCCiOSVersion_4_3_2 = 0x04030200,
 	kCCiOSVersion_4_3_3 = 0x04030300,
-
+    kCCiOSVersion_5_0_0 = 0x05000000,
+    
 	kCCMacVersion_10_5  = 0x0a050000,
 	kCCMacVersion_10_6  = 0x0a060000,
 	kCCMacVersion_10_7  = 0x0a070000,
