@@ -300,17 +300,30 @@ typedef struct _PVRTexHeader
 		glPixelStorei(GL_UNPACK_ALIGNMENT,1);
 		glGenTextures(1, &name_);
 		glBindTexture(GL_TEXTURE_2D, name_);
+        
+        //set texture params here, it's faster
+        // Default: Anti alias.
+		if( numberOfMipmaps_ == 1 )
+			glTexParameteri( GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_LINEAR );
+		else
+			glTexParameteri( GL_TEXTURE_2D, GL_TEXTURE_MIN_FILTER, GL_LINEAR_MIPMAP_NEAREST );
+		glTexParameteri( GL_TEXTURE_2D, GL_TEXTURE_MAG_FILTER, GL_LINEAR );
+        
+		glTexParameteri( GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_CLAMP_TO_EDGE );
+		glTexParameteri( GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_CLAMP_TO_EDGE );
 	}
 
 	CHECK_GL_ERROR(); // clean possible GL error
 
+    GLenum internalFormat = tableFormats[tableFormatIndex_][kCCInternalOpenGLInternalFormat];
+    GLenum format = tableFormats[tableFormatIndex_][kCCInternalOpenGLFormat];
+    GLenum type = tableFormats[tableFormatIndex_][kCCInternalOpenGLType];
+    BOOL compressed = tableFormats[tableFormatIndex_][kCCInternalCompressedImage];
+    
 	// Generate textures with mipmaps
 	for (GLint i=0; i < numberOfMipmaps_; i++)
 	{
-		GLenum internalFormat = tableFormats[tableFormatIndex_][kCCInternalOpenGLInternalFormat];
-		GLenum format = tableFormats[tableFormatIndex_][kCCInternalOpenGLFormat];
-		GLenum type = tableFormats[tableFormatIndex_][kCCInternalOpenGLType];
-		BOOL compressed = tableFormats[tableFormatIndex_][kCCInternalCompressedImage];
+		
 		
 		if( compressed && ! [[CCConfiguration sharedConfiguration] supportsPVRTC] ) {
 			CCLOG(@"cocos2d: WARNING: PVRTC images are not supported");
@@ -363,16 +376,15 @@ typedef struct _PVRTexHeader
 		if( pvrlen < 0 ) {
 			[self release];
 			return nil;
-		}			
+		}	
 		
-
         numberOfMipmaps_ = 0;
         
 		name_ = 0;
 		width_ = height_ = 0;
 		tableFormatIndex_ = -1;
 		hasAlpha_ = FALSE;
-
+        
 		retainName_ = NO; // cocos2d integration
 		
 		if( ! [self unpackPVRData:pvrdata PVRLen:pvrlen] || ![self createGLTexture]  ) {
@@ -380,6 +392,45 @@ typedef struct _PVRTexHeader
 			[self release];
 			return nil;
 		}
+        
+#ifdef __IPHONE_OS_VERSION_MAX_ALLOWED
+        
+		GLenum pixelFormat = tableFormats[tableFormatIndex_][kCCInternalCCTexture2DPixelFormat];
+		CCConfiguration *conf = [CCConfiguration sharedConfiguration];
+        
+		if( [conf OSVersion] >= kCCiOSVersion_5_0_0 )
+		{
+            
+			// iOS BUG:
+			// RGB888 textures allocate much more memory than needed on iOS 5
+			// http://www.cocos2d-iphone.org/forum/topic/31092
+            
+			if( pixelFormat == kCCTexture2DPixelFormat_RGB888 ) {
+				printf("\n");
+				NSLog(@"cocos2d: WARNING. Using RGB888 texture. Convert it to RGB565 or RGBA8888 in order to reduce memory");
+				NSLog(@"cocos2d: WARNING: File: %@", [path lastPathComponent] );
+				NSLog(@"cocos2d: WARNING: For furhter info visit: http://www.cocos2d-iphone.org/forum/topic/31092");
+				printf("\n");
+			}
+            
+			// iOS BUG:
+			// If Texture is both 16-bit and NPOT on iOS5, then warn the user
+			// http://www.cocos2d-iphone.org/forum/topic/31092
+            
+			else if( (pixelFormat == kCCTexture2DPixelFormat_RGB565 || pixelFormat == kCCTexture2DPixelFormat_RGBA4444 || pixelFormat == kCCTexture2DPixelFormat_RGB5A1) &&
+                    ( (width_ != ccNextPOT(width_)) || height_ != ccNextPOT(height_) ) )
+			{
+				printf("\n");
+				NSLog(@"cocos2d: WARNING. Using 16-bit & NPOT (%d,%d) texture. Convert it to POT (%lu,%lu) in order to save memory", width_, height_, ccNextPOT(width_), ccNextPOT(height_) );
+				NSLog(@"cocos2d: WARNING: File: %@", [path lastPathComponent] );
+				NSLog(@"cocos2d: WARNING: For furhter info visit: http://www.cocos2d-iphone.org/forum/topic/31092");
+				printf("\n");
+			}
+		}
+#endif // iOS
+
+
+
 		
 		free(pvrdata);
 	}
